--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -10,7 +10,7 @@
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/trade/add">Добавить обмен</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Магазин</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">О нас</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Профиль</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/profile">Профиль</a>
         </nav>
     </div>
 </div>
