--- a/src/main/resources/templates/trade-add.html
+++ b/src/main/resources/templates/trade-add.html
@@ -12,7 +12,7 @@
     <form action="/trade/add" method="post">
         <input type="text" name="nameSkin" placeholder="Введите название скина" class="form-control"><br>
         <input type="text" name="floatSkin" placeholder="Выберете качество скина" class="form-control"><br>
-        <textarea name="full_text" placeholder="Напишите на что готовы обменять" class="form-control"></textarea><br>
+        <textarea name="fullText" placeholder="Напишите на что готовы обменять" class="form-control"></textarea><br>
         <button type="submit" class="btn btn-success">Добавить обмен</button>
     </form>
     </div>
