--- a/src/main/resources/templates/trade-details.html
+++ b/src/main/resources/templates/trade-details.html
@@ -9,11 +9,14 @@
 
 <div class="container mt-5">
     <div th:each="el : ${post}" class="alert alert-info mt-2">
-        <h1 th:text="${el.anons}"/>
-        <p th:text="${el.full_text}"/>
-        <p th:text="${el.views}"/>
-        <a th:href="'/trade/' + ${el.id} + '/edit'" class="btn btn-warning " >Редактировать</a>
-        <a th:href="'/trade/' + ${el.id}+ '/remove'" class="btn btn-warning " >Удалить</a>
+        <h1 th:text="${el.floatSkin}"/>
+        <p th:text="${el.fullText}"/>
+        <p><b>Просмотры: </b> <span th:text="${el.views}"></p>
+        <a th:href="'/trade/' + ${el.id} + '/edit'" class="btn btn-warning " >Редактировать</a><br><br>
+        <form th:action="'/trade/' + ${el.id} + '/remove'" method="post">
+            <button class="btn btn-warning " type="submit">Удалить</button>
+        </form>
+
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
