--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,11 +1,11 @@
-<div th:fragment="footer">
-    <footer class="text-body-secondary py-5">
+<div th:fragment="footer" style= background-color:#313135>
+    <footer class="text-body-secondary py-4">
         <div class="container">
             <p class="float-end mb-1">
-                <a href="#">Вернуться наверх</a>
+                <a href="#"><b style="color:white">Вернуться наверх</b></a>
             </p>
-            <p class="mb-1">Для сотрудничества пишите на почту: TradeCS2@mail.ru</p>
-            <p class="mb-0">Если заблудились, то нажмите --> <a href="/">Вернуться на главную страницу</a></p>
+            <p class="mb-1" ><b style="color:#736eb4">Для сотрудничества пишите на почту: TradeCS2@mail.ru</b></p>
+            <p class="mb-0"><b style="color:#736eb4"> Если заблудились, то нажмите --> <a href="/"><b style="color:white">Вернуться на главную страницу</b></a></b></p>
         </div>
     </footer>
 </div>
