--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,16 +1,18 @@
+<body>
 <div th:fragment="header">
-    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-3 border-bottom" style= background-color:#313135>
         <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-            <span class="fs-4">Trade CS2</span>
+            <span class="fs-4"><b style="color:#736eb4" >Trade CS2</b></span>
         </a>
-
-        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/trade">Обмены</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/trade/add">Добавить обмен</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Магазин</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">О нас</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/profile">Профиль</a>
+        <nav class="d-inline-flex mt-25 mt-md-25 ms-md-auto">
+            <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/"><b style="color:#736eb4" >Главная</b></a>
+                <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/trade"><b style="color:#736eb4" >Обмены</b></a>
+                <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/trade/add"><b style="color:#736eb4" >Добавить обмен</b></a>
+                <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="#"><b style="color:#736eb4" >Магазин</b></a>
+                <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/about"><b style="color:#736eb4" >О нас</b></a>
+                <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/profile"><b style="color:#736eb4" >Профиль</b></a>
         </nav>
     </div>
 </div>
+</body>
+
