--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/security/tags">
 <head>
     <title>Профиль</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -6,15 +6,17 @@
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
-
 <div class="container mt-5">
-    <h1>Авторизация</h1>
-    <div th:each="el : ${posts}" class="alert alert-info mt-2">
-        <a th:href="" class="btn btn-warning " >Войти</a><br><br>
-        <a th:href="" class="btn btn-warning " >Зарегистрироваться</a>
+    <h1>Профиль</h1>
+    <div>
+            <h2></h2>
+                <h3><th:block={pageContext.request.userPrincipal.name}</h3>
+                <sec:authorize access="!isAuthenticated()">
+                    <h4><a href="/login">Войти</a></h4>
+                    <h4><a href="/registration">Зарегистрироваться</a></h4>
+                </sec:authorize>
     </div>
-
-    <div th:insert="blocks/footer :: footer"></div>
-
+</div>
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
