--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
                         <div class="card shadow-sm">
                             <img src="img/AWPDragonLore.png">
                             <div class="card-body">
-                                <p class="card-text">ПРОВЕРКА</p>
+                                <p class="card-text">AWP | Dragon Lore (Field-Tested)</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">Посмотреть
