--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -5,13 +5,10 @@
         </div>
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container">
-                <a href="#" class="navbar-brand align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                         viewBox="0 0 24 24">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                        <circle cx="12" cy="13" r="4"></circle>
-                    </svg>
+                <a class="navbar-brand align-items-center">
+                    <img src="img/Avatar.png"
+                         alt="avatar"
+                         class="rounded-circle img-fluid" style="width: 40px;">
                     <strong><b style="color:#736eb4">Trade CS2</b></strong>
                 </a>
                 <nav class="d-inline-flex mt-25 mt-md-25 ms-md-auto">
