--- a/src/main/resources/templates/trade-add.html
+++ b/src/main/resources/templates/trade-add.html
@@ -1,12 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Обмены скинов</title>
+    <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
+
 <body>
 <header th:insert="blocks/header :: header"></header>
-
 <div class="container mt-5 mb-5 ">
     <h1>Добавления обмена</h1>
     <form action="/trade/add" method="post">
