--- a/src/main/resources/templates/trade.html
+++ b/src/main/resources/templates/trade.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Обмены скинов</title>
+    <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
@@ -16,6 +16,6 @@
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
-
+</div>
 </body>
 </html>
